[package]
name = "maschine-mikro-mk3-driver"
version = "0.1.0"
authors = ["Viktor Rudnev <me@vrudnev.xyz>"]
edition = "2018"

[dependencies]
hidapi = "*"
alsa = "<0.6.0"
num = "*"
num-derive = "*"
num-traits = "*"
midly = "0.5.3"
midir = { version = "0.10.1", features = ["default", "jack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
